Fixed setup wrapping

--- a/src/theme/common.scss
+++ b/src/theme/common.scss
@@ -7,6 +7,10 @@ html, body {
   overflow-x: hidden;
 }
 
+.nowrap {
+  white-space: nowrap;
+}
+
 .spacer {
   flex-grow: 1;
 }
